fixing white space problem

--- a/assets/base.css
+++ b/assets/base.css
@@ -17,7 +17,7 @@ h1 {
 }
 
 p {
-  white-space: pre-line;
+  white-space: pre-wrap;
 }
 
 .buttons a {
